tests/checker/diagnostics/0652_functor_call_abstract_function_int_10.ml.infer.expected
File "0652_functor_call_abstract_function_int_10.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0652_functor_call_abstract_function_int_10 is not a valid module name.

File "0652_functor_call_abstract_function_int_10.ml", line 7, characters 15-16:
7 |   let y = X.id 9
                   ^
Error: The constant 9 has type int but an expression was expected of type X.t
